# haro

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml
.cursor/rules/integration/: RULE.mdc
.cursor/rules/manifest/: RULE.mdc
.cursor/rules/python/: RULE.mdc
.cursor/rules/tests/: RULE.mdc
.cursor/skills/update-version/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: integration.instructions.md  manifest.instructions.md  python.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  release.yml
config/: configuration.yaml
custom_components/haro/: __init__.py  canonical.py  config_events.py  config_flow.py  config_queue.py  config_sync.py  const.py  diagnostics.py  event_forwarder.py  haeo_inputs.py  icons.json  manifest.json  queue_log.py  replay_client.py  sensor.py  system_health.py
custom_components/haro/translations/: en.json
scripts/: dev_setup_home_assistant.py
tests/: test_canonical.py  test_config_events.py  test_config_flow.py  test_config_queue.py  test_config_sync.py  test_dev_config.py  test_event_forwarder.py  test_haeo_inputs.py  test_init.py  test_manifest.py  test_queue_log.py  test_replay_client.py  test_sensor.py  test_system_health.py  test_translations.py
