[project]
name = "haro"
version = "0.0.1"
description = "Home Assistant Replay Observer"
readme = "README.md"
requires-python = ">=3.13.2,<3.14"
dependencies = ["homeassistant>=2026.1.1"]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-homeassistant-custom-component>=0.13.300",
  "ruff>=0.14.10",
  "pyright>=1.1.408",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "custom_components/haro"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
